All text now in english and french

--- a/src/Main/login_fr.properties
+++ b/src/Main/login_fr.properties
@@ -4,3 +4,6 @@ password=Le mot de passe
 login=Connexion
 exit=Sortir
 timezone=Système fuseau horaire
+invalidcreds=Les informations d'identification invalides
+invaliduser=Nom d'utilisateur invalide
+usetest=Vous devez utiliser test comme nom d'utilisateur
