--- a/src/Main/login_en.properties
+++ b/src/Main/login_en.properties
@@ -4,3 +4,6 @@ password=Password
 login=Login
 exit=Exit
 timezone=System timezone
+invalidcreds=Invalid credentials
+invaliduser=Invalid username
+usetest=You must use test as the username
